# chatgpt-command-line

./: .gitignore  README.md  pyproject.toml
chatgpt/: main.py
